# TinkoffML20201ProgTask2

./: README.md  pyproject.toml  setup.cfg
task_prog2/: sudoku.py
